--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -1,10 +1,10 @@
 
 
 div {
-    color: white
-    background-color: black;
+    color: white;
+    background-color: red;
+    text-align: center;
+    font-size: 32px;
+    font-weight: bold;
 }
 
-p {
-    color: red;
-}
