Add id selector to index and add properties to it
Add 'div id' to index to create id for css.
in css change color to blue.
in css change font-size to 36px.

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@ p{
     background-color: rgb(250, 195, 204);
     font-family:"Verdana", "DejaVu Sans", "sans-serif";
 }
+
+#Number-2{
+    color: blue;
+    font-size: 36px;
+}
