--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,10 +1,23 @@
-p{
+.Number-1,
+.Number-3,
+.Number-5{
     background-color: rgb(250, 195, 204);
     font-family:"Verdana", "DejaVu Sans", "sans-serif";
 }
+
 
 #Number-2{
     color: blue;
     font-size: 36px;
 }
 
+
+.Number-3{
+    font-size: 24px;
+}
+
+#Number-4{
+    background-color: rgb(127, 226, 127);
+    font-size: 24px;
+    font-weight: bold;
+}
