--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -15,6 +15,11 @@ img {
   margin-bottom: 32px;
 }
 
+.container {
+  display: flex;
+  align-items: center;
+}
+
 /* do not edit this footer */
 .footer {
   position: fixed;
