--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -18,6 +19,7 @@ img {
 .container {
   display: flex;
   align-items: center;
+  gap: 52px;
 }
 
 /* do not edit this footer */
