--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -11,15 +11,17 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  display: flex;
-  justify-content: center;
   margin-bottom: 32px;
 }
 
 .container {
   display: flex;
-  align-items: center;
+  justify-content: center;
   gap: 52px;
+}
+
+.words {
+  max-width: 200px;
 }
 
 /* do not edit this footer */
