--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,7 +5,37 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
+
+ul {
+  list-style-type: none;
+  margin: 8px;
+  padding: 8px;
+}
+
+a {
+  text-decoration: none;
+  color: grey;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+  .header .left-links {
+    display: flex;
+    gap: 16px;
+  }
+
+  .header .right-links {
+    display: flex;
+    gap: 16px;
+    margin-right: 16px;
+  }
 
 img {
   width: 600px;
@@ -16,6 +46,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px;
 }
 
 input {
@@ -23,4 +54,39 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.content {
+  margin: auto;
+}
+
+.input  {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+  margin-bottom: 8px;
+  flex: 1;
+}
+.buttons {
+  display: flex;
+  justify-content: center;
+  padding: 16px;
+  gap: 4px;
+}
+
+
+.footer {
+  display: flex;
+justify-content: space-between;
+background-color: #eeeeee;
+}
+
+.footer .right-links {
+  display: flex;
+  gap: 16px;
+}
+
+.footer .left-links {
+  display: flex;
+  gap: 16px;
 }
